<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sofiane.esiee_drive.CreateUser"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textSize="20sp"
        android:text="@string/register"
        android:textStyle="normal|bold|italic" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/FamilyNameField"
        android:hint="@string/user_family_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/NameField"
        android:hint="@string/name_user" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/EmailField"
        android:hint="@string/enterMail"
        android:layout_weight="0" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/PasswordField"
        android:hint="@string/enterPwd"
        android:maxLines="1"
        android:layout_weight="0" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:focusableInTouchMode="true"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:maxLines="1"
        android:ems="10"
        android:id="@+id/ConfirmationPasswordField"
        android:hint="@string/confirmePwd" />

    <Button
        android:text="@string/validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ValidateButton"
        android:layout_weight="0" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</LinearLayout>
