<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sofiane.esiee_drive.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/EmailField"
        android:hint="@string/mail" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/EmailField"
        android:layout_alignEnd="@+id/EmailField"
        android:layout_marginTop="12dp"
        android:id="@+id/PasswordField"
        android:hint="@string/mdp" />

    <Button
        android:text="@string/connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PasswordField"
        android:layout_marginTop="23dp"
        android:id="@+id/connectButton"
        android:layout_alignEnd="@+id/PasswordField"
        android:layout_alignStart="@+id/PasswordField" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/CreateAccount"
        android:text="@string/createAccount"
        android:layout_below="@+id/connectButton"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:id="@+id/textView"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textAllCaps="false"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
